@startuml

skinparam componentStyle uml2
skinparam packageStyle rectangle
skinparam handwritten false
skinparam defaultFontName "Segoe UI"
skinparam ranksep 100
skinparam nodesep 80

' DDD Stereotypes Styling
skinparam class {
    BackgroundColor<<Aggregate Root>> #FEFECE
    BorderColor<<Aggregate Root>> #B8860B
    BackgroundColor<<Entity>> #E6F3FF
    BorderColor<<Entity>> #4682B4
    BackgroundColor<<Value Object>> #E8E8E8
    BorderColor<<Value Object>> #696969
    BackgroundColor<<Domain Event>> #FFE4E1
    BorderColor<<Domain Event>> #CD5C5C
    BackgroundColor<<Enum>> #F0FFF0
    BorderColor<<Enum>> #2E8B57
}

title Enterprise Platform Owner Domain Model

package "Platform Governance Context" {

    class "PlatformOwner" <<Aggregate Root>> {
        -- Identity --
        id : PlatformId
        name : String
        lifecycleState : PlatformLifecycle

        -- Governance & Versioning --
        currentVersion : Long
        lastUpdated : Instant
        
        -- Capabilities --
        + reviseCommission(newPolicy, effectiveDate, reason)
        + publishLegalTerms(terms, effectiveDate)
        + scheduleMaintenance(window)
        + rebrand(brandIdentity)
        + updateCorporateDetails(legalEntity)
        + imposeSanctions(reason)
        + activate()
    }

    enum "PlatformLifecycle" <<Enum>> {
        PROVISIONING
        LIVE
        RESTRICTED
        MAINTENANCE_MODE
        SUNSET
    }

    ' --- Sub-Entities (Lifecycle Managed) ---

    class "CommissionPolicy" <<Entity>> {
        policyId : UUID
        version : Long
        effectivePeriod : DateRange
        rules : Set<CommissionRule>
        --
        + calculateFees(amount)
        + isEffectiveAt(timestamp)
    }

    class "FeatureConfiguration" <<Entity>> {
        configId : UUID
        version : Long
        toggles : Map<FeatureKey, Boolean>
        --
        + isFeatureEnabled(key)
    }

    class "LegalTermSet" <<Entity>> {
        documentId : UUID
        version : String
        type : DocumentType (TOS, PRIVACY)
        contentHash : String
        effectiveDate : Instant
        status : DocumentStatus (DRAFT, PUBLISHED, ARCHIVED)
    }

    class "MaintenanceWindow" <<Entity>> {
        windowId : UUID
        scheduledStart : Instant
        scheduledEnd : Instant
        severity : ImpactLevel
        reason : String
        status : WindowStatus
        --
        + isActive(now)
    }

    ' --- Value Objects (Immutable Configuration) ---

    class "OperationalLimits" <<Value Object>> {
        maxTransactionVal : Money
        maxDailySellers : Integer
        globalRateLimit : TPS
        --
        + validateCapacity()
    }

    class "ComplianceMandate" <<Value Object>> {
        kycRequired : Boolean
        taxIdRequired : Boolean
        sanctionedRegions : Set<GeoRegion>
        dataResidency : Region
    }

    class "LocalizationPolicy" <<Value Object>> {
        baseCurrency : Currency
        supportedCurrencies : Set<Currency>
        defaultLocale : Locale
        timeZone : ZoneId
    }

    class "BrandIdentity" <<Value Object>> {
        logoUrl : URL
        faviconUrl : URL
        primaryColor : HexColor
        supportEmail : Email
        helpCenterUrl : URL
    }

    class "CorporateIdentity" <<Value Object>> {
        legalBizName : String
        taxRegistrationId : String
        registeredAddress : Address
        supportPhone : PhoneNumber
    }

    ' --- Domain Events ---

    package "Events" {
        class "CommissionStructureRevised" <<Domain Event>>
        class "LegalTermsPublished" <<Domain Event>>
        class "MaintenanceScheduled" <<Domain Event>>
        class "PlatformSanctioned" <<Domain Event>>
    }

    ' --- Relationships ---

    PlatformOwner "1" *-- "1" PlatformLifecycle
    PlatformOwner "1" o-- "0..*" CommissionPolicy : history >
    PlatformOwner "1" o-- "1" FeatureConfiguration : current >
    PlatformOwner "1" o-- "0..*" LegalTermSet : versions >
    PlatformOwner "1" o-- "0..*" MaintenanceWindow : schedules >

    PlatformOwner "1" *-- "1" OperationalLimits
    PlatformOwner "1" *-- "1" ComplianceMandate
    PlatformOwner "1" *-- "1" LocalizationPolicy
    PlatformOwner "1" *-- "1" BrandIdentity
    PlatformOwner "1" *-- "1" CorporateIdentity

    PlatformOwner ..> CommissionStructureRevised : emits
    PlatformOwner ..> LegalTermsPublished : emits
    PlatformOwner ..> MaintenanceScheduled : emits

}

@enduml
